--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"sass-embedded": "^1.87.0",
 		"svelte": "^5.0.0",
 		"vite": "^6.2.5"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-netlify": "^5.0.1"
 	}
 }
